@@ -5,3 +5,4 @@ src/*.o
 src/*.so
 src/*.dll
 inst/doc
+*.tar.gz
